--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Alexandre Dubois</title>
+    <title>Portfolio - Jules Mangel</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -23,7 +23,7 @@
     <!-- Navbar -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <a href="#" class="nav-logo">Alexandre Dubois</a>
+            <a href="#" class="nav-logo">Jules Mangel</a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#hero">Accueil</a></li>
                 <li class="nav-item"><a href="#about">À propos</a></li>
@@ -37,9 +37,9 @@
         <!-- Hero Section -->
         <section class="section hero" id="hero">
             <div class="container">
-                <h1>Alexandre Dubois</h1>
+                <h1>Jules Mangel</h1>
                 <h3>Étudiant en Informatique</h3>
-                <p>Passionné par le développement web et les nouvelles technologies. Actuellement en Master 1 à l'École Supérieure d'Informatique, je crée des expériences numériques innovantes et immersives.</p>
+                <p>Passionné par la programation et les nouvelles technologies. Actuellement en premiére année de BUT informatique à l'IUT2 de Grenoble.</p>
                 <div class="hero-buttons">
                     <a href="#about" class="btn">Découvrir mon parcours</a>
                     <a href="#projects" class="btn">Mes projets</a>
@@ -97,8 +97,8 @@
                                     <p>Passionné de jeux vidéo et développement de mini-jeux</p>
                                 </div>
                                 <div class="activity-item">
-                                    <h3>🌱 Open Source</h3>
-                                    <p>Contribution à des projets open source sur GitHub</p>
+                                    <h3>Jeu du pendu</h3>
+                                    <p>Creation d'un pendu en python.</p>
                                 </div>
                             </div>
                         </div>
@@ -106,33 +106,48 @@
         </section>
 
         <!-- Projects Section -->
-        <section class="section" id="projects">
-            <div class="container">
-                <h2 style="color: white; font-size: 3rem; text-align: center; margin-bottom: 3rem; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">Mes Projets</h2>
-                <div class="projects-grid">
-                    <div class="project-card" onclick="openProject('weather')">
-                        <h3>🌦️ WeatherCloud</h3>
-                        <p>Application météo interactive avec visualisation 3D des données climatiques en temps réel. Utilise Three.js pour les animations et une API météo.</p>
-                        <div class="btn">Découvrir le projet</div>
-                    </div>
-                    <div class="project-card" onclick="openProject('gamehub')">
-                        <h3>🎮 GameHub</h3>
-                        <p>Plateforme de jeux en ligne multijoueur avec chat en temps réel. Développée avec Node.js, Socket.io et React pour une expérience fluide.</p>
-                        <div class="btn">Découvrir le projet</div>
-                    </div>
-                    <div class="project-card" onclick="openProject('chatbot')">
-                        <h3>🤖 ChatBot IA</h3>
-                        <p>Assistant virtuel intelligent utilisant le machine learning pour comprendre et répondre aux questions des utilisateurs de manière naturelle.</p>
-                        <div class="btn">Découvrir le projet</div>
-                    </div>
-                    <div class="project-card" onclick="openProject('taskflow')">
-                        <h3>📱 TaskFlow</h3>
-                        <p>Application mobile de gestion de tâches avec synchronisation cloud. Interface intuitive et notifications intelligentes pour optimiser la productivité.</p>
-                        <div class="btn">Découvrir le projet</div>
-                    </div>
-                </div>
+            <!-- Effet nuages -->
+    <div class="clouds-layer">
+        <div class="cloud cloud-1"></div>
+        <div class="cloud cloud-2"></div>
+        <div class="cloud cloud-3"></div>
+    </div>
+
+    <div class="container">
+        <h1 class="section-title">Mes Projets</h1>
+        <div class="projects-grid">
+            <div class="project-card" onclick="openProject('weather')">
+                <h3>🌦️ WeatherCloud</h3>
+                <p>Application météo interactive avec visualisation 3D des données climatiques en temps réel. Utilise Three.js pour les animations et une API météo.</p>
+                <div class="btn">Découvrir le projet</div>
             </div>
-        </section>
+            <div class="project-card" onclick="openProject('gamehub')">
+                <h3>🎮 GameHub</h3>
+                <p>Plateforme de jeux en ligne multijoueur avec chat en temps réel. Développée avec Node.js, Socket.io et React pour une expérience fluide.</p>
+                <div class="btn">Découvrir le projet</div>
+            </div>
+            <div class="project-card" onclick="openProject('chatbot')">
+                <h3>🤖 ChatBot IA</h3>
+                <p>Assistant virtuel intelligent utilisant le machine learning pour comprendre et répondre aux questions des utilisateurs de manière naturelle.</p>
+                <div class="btn">Découvrir le projet</div>
+            </div>
+            <div class="project-card" onclick="openProject('taskflow')">
+                <h3>📱 TaskFlow</h3>
+                <p>Application mobile de gestion de tâches avec synchronisation cloud. Interface intuitive et notifications intelligentes pour optimiser la productivité.</p>
+                <div class="btn">Découvrir le projet</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal" id="projectModal">
+        <div class="modal-content">
+            <button class="close-btn" onclick="closeModal()">&times;</button>
+            <div id="modalContent">
+                <!-- Le contenu sera injecté ici par JavaScript -->
+            </div>
+        </div>
+    </div>
 
         <!-- Experience Section -->
         <section class="section" id="experience">
@@ -184,3 +199,35 @@
                             <h3>🎓 Baccalauréat Scientifique</h3>
                             <p><strong>Mention Très Bien</strong></p>
                             <p>Spécialité mathématiques et sciences informatiques</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</body>
+<footer>
+        <section class="footer">
+
+            <div class="footer-links">
+
+                <h2>Contact</h2>
+
+                <p>Prêt à collaborer sur des projets innovants ? N'hésitez pas à me contacter !</p>
+
+                <div class="social-link">
+                    <a href="mailto:alexandre.dubois@email.com" class="btn">📧 Email</a>
+                    <a href="https://linkedin.com/in/alexandre-dubois" class="btn">💼 LinkedIn</a>
+                    <a href="https://github.com/alexandredubois" class="btn">🐙 GitHub</a>
+                    <a href="tel:+33123456789" class="btn">📱 Téléphone</a>
+                </div>
+                <p style="margin-top: 2rem; font-size: 1rem; opacity: 0.8;">
+                    "L'innovation distingue un leader d'un suiveur" - Steve Jobs
+                </p>
+            </div>
+        </section>
+    </div>
+
+</footer>
+    <script src="script.js"></script>
+</html>
