partie1-personnalisation du texte

--- a/main.html
+++ b/main.html
@@ -29,6 +29,7 @@
                 <li class="nav-item"><a href="#about">À propos</a></li>
                 <li class="nav-item"><a href="#Projects">Projets</a></li>
                 <li class="nav-item"><a href="#experience">Parcours</a></li>
+                <li class="nav-item"><a href="#contact">Me Contacter</a></li>
             </ul>
         </div>
     </nav>
@@ -86,19 +87,19 @@
                             <div class="activities-grid">
                                 <div class="activity-item">
                                     <h3>Résponsable sud Prologin</h3>
-                                    <p>Je suis chargé d'organiser des évenements Prologin dans tout la région sud. Prologin étant une association qui a pour but de promouvoir l'informatique envers les jeunes,c'est pour ça qu'ils organisent des <a href="girlscancode.fr">Girls Can Code </a>, <a href="">le concour National de programmation</a> et des ateliers d'initiation à l'informatique.</p>
+                                    <p>Je suis chargé d'organiser des évenements Prologin dans tout la région sud. Prologin étant une association qui a pour but de promouvoir l'informatique envers les jeunes,c'est pour ça qu'ils organisent des <a href="girlscancode.fr">Girls Can Code </a>, <a href="">le Concour National de programmation</a> et des ateliers d'initiation à l'informatique.</p>
                                 </div>
                                 <div class="activity-item">
-                                    <h3>📚 Veille Tech</h3>
-                                    <p>Suivi des dernières tendances en développement et IA</p>
+                                    <h3>Résponsable communication Prologin</h3>
+                                    <p>Chargé de tout la communication externe et interne de Prologin, allant de la création de suport visuel pour nos stages à communiquer avec des académies et des grosses entreprises pour leur parler de Prologin.</p>
                                 </div>
                                 <div class="activity-item">
-                                    <h3>🎮 Gaming</h3>
-                                    <p>Passionné de jeux vidéo et développement de mini-jeux</p>
+                                    <h3>Animateur</h3>
+                                    <p>Tout les été depuis que j'ai 16 ans je travaille en tant qu'animateur avec les 3-6 ans.</p>
                                 </div>
                                 <div class="activity-item">
-                                    <h3>Jeu du pendu</h3>
-                                    <p>Creation d'un pendu en python.</p>
+                                    <h3>Théatre</h3>
+                                    <p>Etant un ancien comédien et faisant partie d'une troupe pendant mon lycée. Je suis un grand fan de théatre. </p>
                                 </div>
                             </div>
                         </div>
@@ -110,27 +111,32 @@
     <div class="container" id="Projects">
         <h1 class="section-title">Mes Projets Informatiques</h1>
         <div class="projects-grid">
-            <div class="project-card" onclick="openProject('weather')">
+            <div class="project-card" onclick="openProject('bees')">
                 <h3>Site West-Coast Bees</h3>
                 <p>Création d'un site web pour vendre des produits venant d'abeilles.</p>
                 <div class="btn">Découvrir le projet</div>
             </div>
-            <div class="project-card" onclick="openProject('weather')">
+            <div class="project-card" onclick="openProject('atos')">
                 <h3>Site Atos simplifiées</h3>
                 <p>Création d'un site web pour vendre des produits venant d'abeilles.</p>
                 <div class="btn">Découvrir le projet</div>
             </div>
-            <div class="project-card" onclick="openProject('gamehub')">
+            <div class="project-card" onclick="openProject('steelwar')">
                 <h3>Jeu Steelwar</h3>
                 <p>Contribution a la création d'un jeu vidéo et de son site web.</p>
                 <div class="btn">Découvrir le projet</div>
             </div>
-            <div class="project-card" onclick="openProject('chatbot')">
+            <div class="project-card" onclick="openProject('afit')">
+                <h3>Projet AFIT</h3>
+                <p>Un projet pour trouver des nombres premiers le plus gros possible en Ocaml.</p>
+                <div class="btn">Découvrir le projet</div>
+            </div>
+            <div class="project-card" onclick="openProject('cuisine')">
                 <h3>Site de cuisine</h3>
                 <p>Création d'un site web regroupant des recettes de cuisine.</p>
                 <div class="btn">Découvrir le projet</div>
             </div>
-            <div class="project-card" onclick="openProject('taskflow')">
+            <div class="project-card" onclick="openProject('pendu')">
                 <h3>Jeu du Pendu</h3>
                 <p>Création d'un jeu du Pendu en python.</p>
                 <div class="btn">Découvrir le projet</div>
@@ -199,7 +205,7 @@
     </div>
 </body>
 <footer>
-        <div class="container">
+        <div class="container" id ="contact">
         <section class="contact-section">
             <h1 class="contact-title">Contact</h1>
             
@@ -269,7 +275,7 @@
         </div>
         
         <div class="footer-bottom">
-            <p>© 2025 Jules Mangel. Créé avec ❤️ et beaucoup de munster</p>
+            <p>© 2025 Jules Mangel. Créé avec ❤️ et beaucoup de monster</p>
         </div>
     </footer>
 </footer>
