--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Jules Mangel</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -82,27 +83,25 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                            <h3 class="section-title">Activités & Passions</h3>
-                            <div class="activities-grid">
-                                <div class="activity-item">
-                                    <h3>Résponsable sud Prologin</h3>
-                                    <p>Je suis chargé d'organiser des évenements Prologin dans tout la région sud. Prologin étant une association qui a pour but de promouvoir l'informatique envers les jeunes,c'est pour ça qu'ils organisent des <a href="girlscancode.fr">Girls Can Code </a>, <a href="">le Concour National de programmation</a> et des ateliers d'initiation à l'informatique.</p>
-                                </div>
-                                <div class="activity-item">
-                                    <h3>Résponsable communication Prologin</h3>
-                                    <p>Chargé de tout la communication externe et interne de Prologin, allant de la création de suport visuel pour nos stages à communiquer avec des académies et des grosses entreprises pour leur parler de Prologin.</p>
-                                </div>
-                                <div class="activity-item">
-                                    <h3>Animateur</h3>
-                                    <p>Tout les été depuis que j'ai 16 ans je travaille en tant qu'animateur avec les 3-6 ans.</p>
-                                </div>
-                                <div class="activity-item">
-                                    <h3>Théatre</h3>
-                                    <p>Etant un ancien comédien et faisant partie d'une troupe pendant mon lycée. Je suis un grand fan de théatre. </p>
-                                </div>
-                            </div>
+                <h3 class="section-title">Activités & Passions</h3>
+                    <div class="activities-grid">
+                        <div class="activity-item">
+                            <h3>Responsable Sud Prologin</h3>
+                            <p>Je suis chargé d'organiser des événements Prologin dans toute la région Sud. Prologin est une association qui a pour but de promouvoir l'informatique auprès des jeunes, c'est pourquoi elle organise des <a href="girlscancode.fr">Girls Can Code</a>, <a href="">le Concours National de Programmation</a> et des ateliers d'initiation à l'informatique.</p>
                         </div>
+                        <div class="activity-item">
+                            <h3>Responsable communication Prologin</h3>
+                            <p>Chargé de toute la communication externe et interne de Prologin, allant de la création de supports visuels pour nos stages à la communication avec des académies et de grandes entreprises pour leur présenter Prologin.</p>
+                        </div>
+                        <div class="activity-item">
+                            <h3>Animateur</h3>
+                            <p>Tous les étés depuis que j'ai 16 ans, je travaille en tant qu'animateur avec les 3-6 ans.</p>
+                        </div>
+                        <div class="activity-item">
+                            <h3>Théâtre</h3>
+                            <p>Étant un ancien comédien et ayant fait partie d'une troupe pendant mon lycée, je suis un grand fan de théâtre.</p>
+                        </div>
+                    </div>
             </div>
         </section>
 
@@ -268,9 +267,9 @@
             </div>
             
             <div class="social-links">
-                <a href="#" class="social-link" title="GitHub">🐙</a>
-                <a href="#" class="social-link" title="LinkedIn">💼</a>
-                <a href="mailito:jules.mangel@etu.univ-grenoble-alpes.fr" class="social-link" title="Mail">📧 </a>
+                <a href="https://github.com/Ulio05" class="social-link fa " title="GitHub"><img src="logo/github-mark.png" style="height: ;"></a>
+                <a href="www.linkedin.com/in/jules-mangel-297072335" class="social-link" title="LinkedIn"><img src="logo/linkedin.png"></a>
+                <a href="mailito:jules.mangel@etu.univ-grenoble-alpes.fr" class="social-link" title="Mail">📧</a>
             </div>
         </div>
         
